@@ -1,3 +1,8 @@
+2007-07-12  Henry Proudhon  <henry.proudhon@insa-lyon.fr>
+
+	* source/swt/org/jfree/experimental/swt/SWTUtils.java
+	(toAwtMouseEvent): improved mouse event conversion.
+
 2007-07-12  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* source/org/jfree/chart/axis/CyclicNumberAxis.java
